--- a/dashboard/src/app/factories/create-factory/template-tab/factory-from-template.styl
+++ b/dashboard/src/app/factories/create-factory/template-tab/factory-from-template.styl
@@ -1,6 +1,9 @@
 .factory-from-template
   min-height  80px
 
-.factory-from-template .CodeMirror
-  border 1px solid $list-separator-color
-  min-height 500px
+  ng-form div[ng-message]
+   color $error-color;
+
+  .CodeMirror
+    border 1px solid $list-separator-color
+    min-height 500px
